# jaldis

./: LICENSE  README.md  dune-project  jaldis.opam
client/: dune  main.ml
lib/: ast.ml  dune  parser.mly
misc/: all.py  commands.py  delay.py
resp/: ast.ml  big_int.ml  dune  lexer.mll  parser.ml  parser.mli  r.ml  serializer.ml
server/: commands.ml  dune  main.ml  rlist.ml  rlist.mli  rops.ml  rset.ml  rstring.ml  storage.ml  storage.mli
test/: dune  resp_parser.ml  resp_roundtrip.ml  resp_serializer.ml  server_commands.ml
